# tume_demo_GUI

./: .gitignore  ReadMe  auth2.py  pyproject.toml  pyws.py  test.py  tume_demo.py
kaji/input/: ID_backup.txt  matching_result.txt
kaji/input/liveness_detection/: ld_result.txt
tume/: Camera.py  Console.py  NaileImage.py  View.py  __init__.py  utils.py
tume_data/asd/input/: ID_backup.txt
tume_data/asdfa/input/: ID_backup.txt
tume_data/asdfads/input/: ID_backup.txt  matching_result.txt
tume_data/asdfads/input/liveness_detection/: ld_result.txt
tume_data/hge/input/: ID_backup.txt  matching_result.txt
tume_data/hge/input/liveness_detection/: ld_result.txt
tume_data/k/input/: ID_backup.txt  matching_result.txt
tume_data/k/input/liveness_detection/: ld_result.txt
tume_data/kaji/input/: ID_backup.txt  matching_result.txt
tume_data/kaji/input/liveness_detection/: ID_backup.txt  ld_result.txt  matching_result.txt
tume_data/ll/input/: ID_backup.txt  matching_result.txt
tume_data/ll/input/liveness_detection/: ld_result.txt
tume_data/mm/input/: ID_backup.txt  matching_result.txt
tume_data/mm/input/liveness_detection/: ld_result.txt
tume_data/new_user/input/: ID_backup.txt
tume_data/test/input/: ID_backup.txt  matching_result.txt
tume_data/test/input/liveness_detection/: ld_result.txt
